test/files/neg/t12799/Test_2.scala

//> using options -Werror -Xlint
//> using jvm 9+

import example._

object Test extends App {
  println(C.answer())
}
